<resources>
    <string name="app_name">PicToGraph</string>
    <string name="title_activity_login">LoginActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="setDate">Set Date</string>
    <string name="setTime">Set Time</string>
    <string name="set">Set</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>

    <string name="dateTimeRangePickerDoneText">Done</string>
    <string name="dateTimeRangePickerStartText">Check in</string>
    <string name="dateTimeRangePickerEndText">Check out</string>

    <string name="time_range_picker">Time range picker</string>
    <string name="time_range">Time range</string>
    <string name="chosen_time_range">%1$s:%2$s - %3$s:%4$s</string>

    <string name="action_done">Done</string>
    <string name="start_time">Start time</string>
    <string name="end_time">End time</string>
    <string name="msg_token_fmt" />

    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="capture">Capture</string>
    <string name="sign_in">Sign in</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="login">LOGIN</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="eae_ar_systems_title">EAE - AR SYSTEMS</string>
    <string name="open_camera_title">OPEN CAMERA</string>
    <string name="add_manual_btn_text">Add Manual</string>
    <string name="upload">Upload</string>
    <string name="sensor_charts">Sensor Charts</string>
    <string name="date_format">dd/MM/yy</string>
    <string name="coma">-</string>
    <string name="pick_date_time">Pick Date Time</string>
    <string name="clear_date_time">Clear Date/Time</string>
    <string name="candle_stick_chart">Candle Stick Chart</string>
    <string name="add_sensor">Add Sensor</string>
    <string name="submit">Submit</string>
    <string name="sensor_id">Sensor Id:</string>
    <string name="send">Send</string>
    <string name="back_to_camera">Back To Camera</string>
    <string name="end_date">End Date</string>
    <string name="pick_time">Pick Time</string>
    <string name="start_date">Start Date</string>
    <string name="pick_date">Pick Date</string>
    <string name="eae_busbar_ar">EAE BUSBAR - AR</string>
    <string name="clear_graph">Clear Graph</string>
    <string name="l1e9">L1E9</string>
    <string name="alert_screen">Alert Screen</string>
    <string name="chart">Chart</string>
    <string name="busbar_system_check">Busbar System Check</string>
    <string name="manual_input">Manual Input</string>
    <string name="camera">Camera</string>
    <string name="sensor_recognition">Sensor Recognition</string>
    <string name="menu">Menu</string>
    <string name="chart_webview">Chart Webview</string>
    <string name="delete_button_text">delete</string>
    <string name="add">+ Add</string>
    <string name="delete">delete</string>
    <string name="live_data">Live Data</string>

</resources>

